--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -4,23 +4,23 @@
         <meta charset="utf-8">
         <title>MojeCv/Kontakt</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/stylesheets/podstrony.css">
+        <script src="https://kit.fontawesome.com/b785ec014a.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <main>
             <div class="container">
                 <div class="contentWindow">
-                    <h1>Kontakt</h1>
-                    <ul>
-                        <li><h2>E-maile:</h2></li>
-                        <ol>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ol>
-                        <li>Numer Telefonu: 532 004 040</li>
-                        <li></li>
-                    </ul>
+                    <h2 id="kontaktH1"><i class="fa-solid fa-phone"></i>Kontakt:</h2>
+                    <section>
+                        <h3>Numer Telefonu:</h3>
+                        <p>48+ 532 004 040</p>
+                        <h3>e-maile:</h3>
+                        <p>Główny email: Kaczmarczykaleks21@gmail.com</p>
+                        <p>"Uczelniany" email: akaczma2@stu.vistula.edu.pl</p>
+                        <p>Dodatkowy email: alekskaczmarczyk24@gmail.com</p>
+                        <a href="/main.html"><button>Wróć do strony</button></a>
+                    </section>
                 </div>
             </div>
         </main>
