poprawaka - zdjecia zeby sie wyswietlalo

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                     </section>
 
                     <section class="imgContainer">
-                        <img src="/img/laptop.jpg" alt="laptop.jpg" width="800" height="500">
+                        <img src="img/laptop.jpg" alt="laptop.jpg" width="800" height="500">
                     </section>
                 </div>
 
@@ -90,7 +90,6 @@
                             <h3>Aktualna nauka:</h3>
                             <p>Aktualnie jestem w trakcie trzeciego roku studiowania informatyki na uczelni <a href="https://vistula.edu.pl/" target="_blank">Vistula</a> w Warszawie na Ursynowie. Zostało mi ostatnie 1,5 roku ( z 3,5 rocznych studiów)</p>
                             <p>Dodatkowo jestem w trakcie kursu z JavaScript</p>
-                            <p>Mam w planach zrobienie kursów z node.js następnie z reacta, a poźniej z typescriptu i angulara</p>
                             <h3>Ukończone szkoły:</h3>
                             <p>Szkoła podstawowa w Serocku im.Mikołaja Kopernika</p>
                             <p>Drugie Liceum ogólnokształcące w Legionowie im. Jana III Sobieskiego</p>
