--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>MojeCv/Kontakt</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/stylesheets/podstrony.css">
+        <link rel="stylesheet" href="stylesheets/podstrony.css">
         <script src="https://kit.fontawesome.com/b785ec014a.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,7 +19,7 @@
                         <p>Główny email: Kaczmarczykaleks21@gmail.com</p>
                         <p>"Uczelniany" email: akaczma2@stu.vistula.edu.pl</p>
                         <p>Dodatkowy email: alekskaczmarczyk24@gmail.com</p>
-                        <a href="/main.html"><button>Wróć do strony</button></a>
+                        <a href="myWebCV/main.html"><button>Wróć do strony</button></a>
                     </section>
                 </div>
             </div>
