kolejne poprawki linków

--- a/html/RODO.html
+++ b/html/RODO.html
@@ -15,7 +15,7 @@
                         <h1>RODO</h1>
                         <p>Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w niniejszym CV dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z ustawą z dnia 10 maja 2018 r. o ochronie danych osobowych oraz Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679).</p>
                         <p>Aleks Kaczmarczyk</p>
-                        <a href="myWebCV/main.html"><button>Wróć do strony</button></a>
+                        <a href="main.html"><button>Wróć do strony</button></a>
                     </section>
                 </div>
             </div>
