--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
                         <h1>Front-end Developer</h1>
                         <p>Kreatywność splata się z technologią w nowoczesnych projektach stron internetowych.</p>
                         <h3>CV - Aleks Kaczmarczyk</h3>
-                        <p><a href="myWebCV/html/kontakt.html">Skontaktuj się ze mną</a></p>
-                        <h4><a href="myWebCV/html/RODO.html">RODO</a></h4>
+                        <p><a href="html/kontakt.html">Skontaktuj się ze mną</a></p>
+                        <h4><a href="html/RODO.html">RODO</a></h4>
                     </section>
 
                     <section class="imgContainer">
