--- a/html/RODO.html
+++ b/html/RODO.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>MojeCv/RODO</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylesheets/podstrony.css">
+        <link rel="stylesheet" href="../stylesheets/podstrony.css">
         <script src="https://kit.fontawesome.com/b785ec014a.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -15,7 +15,7 @@
                         <h1>RODO</h1>
                         <p>Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w niniejszym CV dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z ustawą z dnia 10 maja 2018 r. o ochronie danych osobowych oraz Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679).</p>
                         <p>Aleks Kaczmarczyk</p>
-                        <a href="main.html"><button>Wróć do strony</button></a>
+                        <a href="../main.html"><button>Wróć do strony</button></a>
                     </section>
                 </div>
             </div>
