zmiania wartości alt dla zdjecia

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                     </section>
 
                     <section class="imgContainer">
-                        <img src="img/laptop.jpg" alt="laptop.jpg" width="800" height="500">
+                        <img src="img/laptop.jpg" alt="odśwież strone jeśli zdjęcie się nie wyświetla" width="800" height="500">
                     </section>
                 </div>
 
