zmiana nazwy głównego pliku z main.html na index i poprawienie linków z tym związanych

--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -19,7 +19,7 @@
                         <p>Główny email: Kaczmarczykaleks21@gmail.com</p>
                         <p>"Uczelniany" email: akaczma2@stu.vistula.edu.pl</p>
                         <p>Dodatkowy email: alekskaczmarczyk24@gmail.com</p>
-                        <a href="../main.html"><button>Wróć do strony</button></a>
+                        <a href="../index.html"><button>Wróć do strony</button></a>
                     </section>
                 </div>
             </div>
